force-app/main/default/objects/Product__c/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <description>ATM fee on different account types</description>
    <inlineHelpText>ATM maintenance fee</inlineHelpText>
    <label>ATM Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>