force-app/main/default/objects/Product__c/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>Card Replacement Cost fee</description>
    <inlineHelpText>Cost to customer on replacement of card</inlineHelpText>
    <label>Card Replacement Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>