force-app/main/default/objects/Product__c/fields/Cost_per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month__c</fullName>
    <description>Monthly cost of account</description>
    <inlineHelpText>Monthly maintenance cost to customer</inlineHelpText>
    <label>Cost per Calendar Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>