force-app/main/default/objects/Product__c/fields/Customer_ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>Customer_ATM_Fee__c</fullName>
    <formula>IF((ATM_Fee__c=0),&apos;Free&apos;, TEXT(ATM_Fee__c *100)+&apos;%&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ATM Fee cost to the customer</inlineHelpText>
    <label>Customer ATM Fee</label>
    <type>Text</type>
</CustomField>