force-app/main/default/objects/Product__c/fields/Customer_cost_per_calendar_month__c.field-meta.xml
<CustomField>
    <fullName>Customer_cost_per_calendar_month__c</fullName>
    <formula>IF( ISBLANK(Cost_per_Calendar_Month__c),&apos;N/a&apos;, TEXT(Cost_per_Calendar_Month__c))</formula>
    <inlineHelpText>Monthly Fee to the customer</inlineHelpText>
    <label>Customer cost per calendar month</label>
    <type>Text</type>
</CustomField>