force-app/main/default/objects/Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Account Type</description>
    <inlineHelpText>Type of account</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Type</valueSetName>
    </valueSet>
</CustomField>